added header styling

--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&family=Spirax&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css" />
     <title>Caffe Retro</title>
   </head>
   <body>
-
+    <!-- the header with navbar  -->
     <header>
       <nav>
         <a href="">Hot</a>
@@ -15,77 +18,80 @@
         <a href="">Cosy</a>
       </nav>
     </header>
-
+    <!-- the first section/hot  -->
     <section>
       <div>
         <div>
           <h1>Hot</h1>
           <p>Hot freshly ground black coffee or a cup of exquisite tea?</p>
           <p>We give you that perfect cup every time.</p>
+          <!-- pric list  -->
           <ul>
             <li>
               <p>Mocha Latte</p>
-              <span>£ 7.50</span>
+              <span>€ 7.50</span>
             </li>
             <li>
               <p>Caffe Formaggio</p>
-              <span>£ 5.00</span>
+              <span>€ 5.00</span>
             </li>
             <li>
               <p>Espresso</p>
-              <span>£ 3.50</span>
+              <span>€ 3.50</span>
             </li>
             <li>
               <p>Chai Verde Latte</p>
-              <span>£ 5.50</span>
+              <span>€ 5.50</span>
             </li>
           </ul>
         </div>
       </div>
     </section>
-
+    <!-- bord to separate sections  -->
     <div></div>
-
+    <!-- the second section/juicy  -->
     <section>
       <div>
         <div>
           <h1>Juicy</h1>
           <p>Ripe fruit - freshly squeezed.</p>
           <p>It's as simple as that. Chunky or smooth - it's your choice.</p>
+          <!-- price list  -->
           <ul>
             <li>
               <p>Branched Apricots</p>
-              <span>£ 4.20</span>
+              <span>€ 4.20</span>
             </li>
             <li>
               <p>Deep Rasberries</p>
-              <span>£ 3.50</span>
+              <span>€ 3.50</span>
             </li>
             <li>
               <p>Smooth Oranges</p>
-              <span>£ 6.50</span>
+              <span>€ 6.50</span>
             </li>
           </ul>
         </div>
       </div>
     </section>
-
+    <!-- bord to separate sections  -->
     <div></div>
-
+    <!-- the third section/cosy  -->
     <section>
       <div>
         <div>
           <h1>Cosy</h1>
           <p>Hang around. Enjoy the settings.</p>
           <p>Use our fast WiFi. Borrow a newspaper or a novel.</p>
+          <!-- contact info  -->
           <ul>
             <li>
               <p>Mon-Sun</p>
-              <span>8am - 11pm</span>
+              <span>8am – 11pm</span>
             </li>
             <li>
               <p>Caffe Retro</p>
-              <span>Canto Vi</span>
+              <span>Canto VI</span>
             </li>
             <li>
               <p>0123-45 67 89</p>
