added styling to section 2 and 3

--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
     <div></div>
     <!-- the second section/juicy  -->
     <section>
-      <div>
-        <div>
-          <div>
-            <h1>Juicy</h1>
-            <p>Ripe fruit - freshly squeezed.</p>
-            <p>It's as simple as that. Chunky or smooth - it's your choice.</p>
+      <div class="juicy-background">
+        <div class="container">
+          <div class="flex">
+            <h1 class="section-title">Juicy</h1>
+            <p class="p-1">Ripe fruit - freshly squeezed.</p>
+            <p class="p-2">It's as simple as that. Chunky or smooth - it's your choice.</p>
             <!-- price list  -->
             <ul>
               <li>
@@ -85,12 +85,12 @@
     <div></div>
     <!-- the third section/cosy  -->
     <section>
-      <div>
-        <div>
-          <div>
-            <h1>Cosy</h1>
-            <p>Hang around. Enjoy the settings.</p>
-            <p>Use our fast WiFi. Borrow a newspaper or a novel.</p>
+      <div class="cosy-background">
+        <div class="container">
+          <div class="flex">
+            <h1 class="section-title">Cosy</h1>
+            <p class="p-1">Hang around. Enjoy the settings.</p>
+            <p class="p-2">Use our fast WiFi. Borrow a newspaper or a novel.</p>
             <!-- contact info  -->
             <ul>
               <li>
