--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
     <!-- the header with navbar  -->
     <header>
       <nav>
-        <a href="">Hot</a>
-        <a href="">Juicy</a>
-        <a href="">Cosy</a>
+        <a href="#hot">Hot</a>
+        <a href="#juicy">Juicy</a>
+        <a href="#cosy">Cosy</a>
       </nav>
     </header>
     <!-- the first section/hot  -->
-    <section>
+    <section id="hot">
       <div class="hot-background">
         <div class="container">
           <div class="flex">
@@ -53,9 +53,9 @@
       </div>
     </section>
     <!-- bord to separate sections  -->
-    <div></div>
+    <div class="separator"></div>
     <!-- the second section/juicy  -->
-    <section>
+    <section id="juicy">
       <div class="juicy-background">
         <div class="container">
           <div class="flex">
@@ -82,9 +82,9 @@
       </div>
     </section>
     <!-- bord to separate sections  -->
-    <div></div>
+    <div class="separator"></div>
     <!-- the third section/cosy  -->
-    <section>
+    <section id="cosy">
       <div class="cosy-background">
         <div class="container">
           <div class="flex">
